--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,9 +23,12 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.2",
+    "react-tsparticles": "^2.12.2",
     "react-webcam": "^7.2.0",
     "stripe": "^18.3.0",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "tsparticles": "^2.12.0",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
